# pigweed-kudzu-playground

./: .bazelrc  .gitignore  .gitmodules  .gn  BUILD.gn  OWNERS  README.md  WORKSPACE  bootstrap.bat  bootstrap.fish  bootstrap.sh  pigweed.json
applications/32blit_demo/: BUILD.gn  main.cc
applications/app_common/: BUILD.bazel  BUILD.gn
applications/app_common/public/app_common/: common.h
applications/app_common_impl/: BUILD.bazel  BUILD.gn  app_common_vars.gni  common_host_imgui.cc  common_host_null.cc  common_pico.cc
applications/badge/: BUILD.bazel  BUILD.gn  main.cc
applications/snake/: BUILD.gn  game.cc  main.cc
applications/snake/public/snake/: game.h
applications/terminal_display/: BUILD.gn  main.cc
build_overrides/: pigweed.gni
lib/32blit/: 32blit.BUILD  BUILD.bazel
lib/framecounter/: BUILD.bazel  BUILD.gn  framecounter.cc
lib/framecounter/public/libkudzu/: framecounter.h
lib/ft6236/: BUILD.bazel
lib/icm42670p/: BUILD.bazel  BUILD.gn  device.cc
lib/kudzu_blinky/: BUILD.bazel  BUILD.gn  blinky.cc  service.cc
lib/kudzu_blinky/public/kudzu_blinky/: blinky.h  service.h
lib/kudzu_buttons/: BUILD.bazel
lib/kudzu_buttons_imgui/: BUILD.gn
lib/kudzu_buttons_null/: BUILD.bazel
lib/kudzu_buttons_pi4ioe5v6416/: BUILD.bazel
lib/kudzu_imu/: BUILD.bazel
lib/kudzu_imu_icm42670p/: BUILD.bazel
lib/kudzu_imu_imgui/: BUILD.bazel
lib/max17048/: BUILD.bazel
lib/max17948/: BUILD.gn  device.cc
lib/max17948/public/max17948/: device.h
lib/pi4ioe5v6416/: BUILD.bazel  device.cc
lib/pi4ioe5v6416/public/pi4ioe5v6416/: device.h
lib/pw_ft6236/: device.cc
lib/pw_icm42670p/: BUILD.gn  device.cc
lib/pw_icm42670p/public/pw_icm42670p/: device.h
lib/pw_max17948/: BUILD.gn  device.cc
lib/pw_tca9535/: BUILD.gn  device.cc
lib/pw_tca9535/public/pw_tca9535/: device.h
lib/pw_touchscreen/: BUILD.bazel  BUILD.gn  buttons.cc
lib/pw_touchscreen/public/pw_touchscreen/: buttons.h  touchscreen.h
lib/pw_touchscreen_ft6236/: BUILD.bazel  BUILD.gn  touchscreen.cc
lib/pw_touchscreen_ft6236/public/pw_touchscreen_ft6236/: touchscreen.h
lib/pw_touchscreen_imgui/: BUILD.gn  touchscreen.cc
lib/pw_touchscreen_imgui/public/pw_touchscreen_imgui/: touchscreen.h
lib/pw_touchscreen_null/: BUILD.bazel  BUILD.gn  touchscreen.cc
lib/pw_touchscreen_null/public/pw_touchscreen_null/: touchscreen.h
lib/random/: BUILD.bazel
lib/rpc/: BUILD.bazel  kudzu.proto
lib/tca9535/: BUILD.gn  device.cc
pcb/: CHANGELOG.md  fp-lib-table  kudzu-parts.kicad_sym  kudzu.kicad_pcb  kudzu.kicad_pro  kudzu.kicad_sch  misc.kicad_sch  power.kicad_sch  rp2040.kicad_sch  sym-lib-table  ux.kicad_sch
pcb/KudzuLibrary.pretty/: CONN HEADER SMD 2POS 1.25MM.kicad_mod  FPC-Connector_1x40-1MP_P0.50mm_Horizontal.kicad_mod  GBA_AB.kicad_mod  GBA_DPad.kicad_mod  GBA_StartSelect.kicad_mod  button_conductive.kicad_mod  dpad_conductive.kicad_mod  ferris.kicad_mod
targets/: transition.bzl
targets/host/: BUILD.bazel  BUILD.gn  target_toolchains.gni
targets/rp2040/: BUILD.bazel  BUILD.gn  boot.cc
targets/rp2040/config/: FreeRTOSConfig.h
tools/: BUILD.bazel  BUILD.gn
tools/kudzu_tools/: build_project.py  presubmit_checks.py
