# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:pigweed.bzl", "pw_cc_test")
load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "nanopb_rpc_proto_library",
)
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kudzu_blinky",
    srcs = ["blinky.cc"],
    hdrs = ["public/kudzu_blinky/blinky.h"],
    includes = ["public"],
    implementation_deps = [
        "@pigweed//pw_log",
        "@pigweed//pw_preprocessor",
    ],
    deps = [
        "//modules/led:monochrome_led",
        "//modules/timer_future",
        "//modules/worker",
        "//system",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_function",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_sync:lock_annotations",
        "@pigweed//pw_system:async",
    ],
)

cc_library(
    name = "service",
    srcs = ["service.cc"],
    hdrs = ["public/kudzu_blinky/service.h"],
    includes = ["public"],
    deps = [
        ":kudzu_blinky",
        ":nanopb_rpc",
        "@pigweed//pw_allocator:allocator",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_async2:dispatcher",
    ],
)